<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/layout_main"
  android:layout_width="match_parent"
  android:layout_height="match_parent" > 
  <com.nutiteq.MapView android:id="@+id/mapView" android:layout_width="fill_parent" android:layout_height="fill_parent" />     
 
   <RelativeLayout
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >
       <TextView
            android:id="@+id/avgvario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/textshapeyellow"
            android:padding="4dp"
            android:singleLine="true"
            android:text="@string/dfavgvar"
            android:textColor="#000000"
            android:textSize="22sp"
            android:layout_marginLeft="2dip"            
            android:textStyle="bold" />

        <com.sensbox.VerticalProgressBar_Reverse
            android:id="@+id/avgprogbar_reverse"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"           
            android:layout_below="@+id/avgvario"
            android:layout_marginLeft="1dip"
            android:layout_marginTop="1dip"
            android:layout_marginBottom="1dip"
            android:maxWidth="20dip"
            android:minWidth="20dip"
            android:padding="2dp" />

        <com.sensbox.VerticalProgressBar
            android:id="@+id/avgprogbar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_above="@+id/avgvario"            
            android:layout_marginLeft="1dip"
            android:layout_marginTop="1dip"
            android:layout_marginBottom="1dip"
            android:maxWidth="20dip"
            android:minWidth="20dip"
            android:padding="2dp" />    
      </RelativeLayout>
       <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="110dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true" >
         <TextView
            android:id="@+id/map_alt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/textshapered"
            android:padding="3dp"
            android:singleLine="true"
            android:text="@string/dfalt"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:gravity="center"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/map_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/map_alt"
            android:background="@drawable/textshapeyellow"
            android:padding="3dp"
            android:singleLine="true"
            android:text="@string/dfspeed"
            android:textColor="#000000"
            android:textSize="14sp"
            android:gravity="center"
            android:textStyle="bold" />       
        <TextView
            android:id="@+id/map_disttakeoff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/map_speed"
            android:background="@drawable/textshapeyellow"
            android:padding="3dp"
            android:singleLine="true"
            android:text="@string/dfdtkf"
            android:textColor="#000000"
            android:textSize="14sp"
            android:gravity="center"
            android:textStyle="bold" />
         <TextView
            android:id="@+id/trackcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/map_disttakeoff"
            android:background="@drawable/textshapeyellow"
            android:padding="3dp"
            android:singleLine="true"
            android:text="@string/dftrck"
            android:textColor="#000000"
            android:textSize="14sp"
            android:gravity="center"
            android:textStyle="bold" />  
        <TextView
            android:id="@+id/map_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/trackcount"
            android:background="@drawable/textshapegreen"
            android:padding="3dp"
            android:singleLine="true"
            android:text="@string/time"
            android:textColor="#FFFF00"
            android:textSize="14sp"
            android:gravity="center"
            android:textStyle="bold" />  
         <TextView
            android:id="@+id/map_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/map_time"
            android:background="@drawable/textshapered"
            android:padding="3dp"
            android:singleLine="true"
            android:text="@string/temp"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:gravity="center"
            android:textStyle="bold" />         
	    <Button
	        android:id="@+id/altinc"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/map_temp"
	        android:textSize="14sp"
            android:gravity="center"
            android:textStyle="bold"
	        android:layout_alignParentRight="true"
	        android:text="Alt ( + )" />
	     <Button
	        android:id="@+id/altdec"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/altinc"
	        android:layout_alignLeft="@+id/altinc"
	        android:textSize="14sp"
            android:gravity="center"
            android:textStyle="bold"
	        android:layout_alignParentRight="true"
	        android:text="Alt ( - )" />
	    
	     <Button
	        android:id="@+id/exit"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/altdec"
	        android:layout_alignLeft="@+id/altdec"
	        android:textSize="14sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
	        android:text="Exit" />	  
	        
	</RelativeLayout>
       
  <RelativeLayout
      android:id="@+id/header"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:background="#800000"
      android:visibility="gone"
      android:gravity="center" >

    <TextView
      android:id="@+id/connection_state"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="5dp"     
      android:textColor="#AAAAAA"
      android:textStyle="bold"
      android:textSize="14sp" />
  </RelativeLayout>  
  <RelativeLayout
      android:id="@+id/footer"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:background="#800000"
      android:visibility="gone"
      android:gravity="center" >
  
    <TextView
      android:id="@+id/date_time"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="5dp"
      android:textColor="#AAAAAA"
      android:textStyle="bold"
      android:textSize="14sp" />
    
  </RelativeLayout>

  <!-- Scrollable Item below header and above footer -->

  <ScrollView
      android:id="@+id/scrollableContents"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:layout_above="@id/footer"
      android:layout_below="@id/header"
      android:visibility="gone"
      android:background="#222" >

    <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:orientation="vertical" >	
      <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"  
        android:text="-"
        android:textColor="#088A08"
        android:textStyle="bold"
        android:textSize="16sp" />

      <TextView
        android:id="@+id/sensvario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp" 
        android:text="-"
        android:textStyle="bold"
        android:textColor="#ADD8E6"
        android:textSize="22sp" />

      <TextView
        android:id="@+id/lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp" 
        android:text="-"
        android:textColor="#AAAAAA"
        android:textSize="16sp" />

      <TextView
        android:id="@+id/lng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp" 
        android:text="-"
        android:textColor="#AAAAAA"
        android:textSize="16sp" />

      <TextView
        android:id="@+id/alt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp" 
        android:text="-"
        android:textColor="#CCCC00"
        android:textSize="16sp" />

      <TextView
        android:id="@+id/speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp" 
        android:text="-"
        android:textColor="#AAAAAA"
        android:textSize="16sp" />

      <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp" 
        android:text="-"
        android:textColor="#AAAAAA"
        android:textSize="16sp" />

       <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp" 
        android:text="-"
        android:textColor="#AAAAAA"
        android:textSize="16sp" />

        <TextView
        android:id="@+id/sats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp" 
        android:text="-"
        android:textColor="#088A08"
        android:textStyle="bold"
        android:textSize="16sp" />    
    </LinearLayout>
  </ScrollView>
</RelativeLayout>